<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fragment_background"
        android:orientation="vertical"
        android:paddingBottom="19dp"
        android:paddingStart="18dp"
        android:paddingEnd="19dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileImageContainer"
            android:layout_width="164dp"
            android:layout_height="164dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@android:color/darker_gray"/>

            <ImageView
                android:id="@+id/profilePlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_profile_icon_50dp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/profileImageCenterGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/profileImageCenterGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="90dp"/>

            <TextView
                android:id="@+id/addPhotoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center_horizontal"
                android:text="@string/add_photo"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileImageCenterGuideline"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/changePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6.7dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_rounded_button"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:text="@string/change_photo"
                android:textColor="@color/colorAccent"
                android:textSize="10sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/removePhoto"
                tools:visibility="visible"/>

            <ImageView
                android:id="@+id/removePhoto"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="10.5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_circle_button"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="center"
                android:src="@drawable/ic_delete_button_9dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/changePhoto"
                tools:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:hint="@string/language"
            android:theme="@style/TextInputLayout">

            <EditText
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_selector_arrow"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/open_sans_regular"
                android:longClickable="false"
                android:windowSoftInputMode="stateAlwaysHidden"
                tools:text="English"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/open_sans_regular"
            android:includeFontPadding="false"
            android:text="@string/account_information"
            android:textColor="@color/dark_gray_tundora"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:hint="@string/first_name"
            android:theme="@style/TextInputLayout">

            <EditText
                android:background="@drawable/selector_bg_edit_text"
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:inputType="textPersonName"
                android:singleLine="true"
                tools:text="James"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:hint="@string/last_name"
            android:theme="@style/TextInputLayout">

            <EditText
                android:background="@drawable/selector_bg_edit_text"
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:inputType="textPersonName"
                android:singleLine="true"
                tools:text="Sullyvan"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:hint="@string/edit_email_hint"
            android:theme="@style/TextInputLayout">

            <EditText
                android:id="@+id/email"
                android:background="@drawable/selector_bg_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:inputType="textEmailAddress"
                tools:text="james.sullyvan@gmail.com"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:hint="@string/date_of_birth"
            android:theme="@style/TextInputLayout">

            <EditText
                android:id="@+id/dateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_edit_text"
                android:drawableEnd="@drawable/ic_selector_arrow"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/open_sans_regular"
                android:longClickable="false"
                android:windowSoftInputMode="stateAlwaysHidden"
                tools:text="07.08.2019"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:hint="@string/gender"
            android:theme="@style/TextInputLayout">

            <EditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_edit_text"
                android:drawableEnd="@drawable/ic_selector_arrow"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/open_sans_regular"
                android:longClickable="false"
                android:windowSoftInputMode="stateAlwaysHidden"
                tools:text="Male"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/open_sans_regular"
            android:includeFontPadding="false"
            android:text="@string/personal_information"
            android:textColor="@color/dark_gray_tundora"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:hint="@string/address_to"
            android:theme="@style/TextInputLayout">

            <EditText
                android:inputType="text"
                android:id="@+id/address_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                tools:text="94 Nordstrasse"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:hint="@string/address"
            android:theme="@style/TextInputLayout">

            <EditText
                android:inputType="text"
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                tools:text="94 Nordstrasse"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:hint="@string/zip"
            android:theme="@style/TextInputLayout">

            <EditText
                android:id="@+id/index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:inputType="number"
                tools:text="234123"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:hint="@string/city"
            android:theme="@style/TextInputLayout">

            <EditText
                android:inputType="text"
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                tools:text="Berlin"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:hint="@string/country"
            android:theme="@style/TextInputLayout">

            <EditText
                android:inputType="text"
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                tools:text="Germany"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>