<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background"
        android:focusableInTouchMode="true"
        tools:context="com.test.arch.ui.screens.auth.login.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/auth_header_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/line_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@id/line_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.cardview.widget.CardView
            android:id="@+id/direction_card_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/login_card_margin_bottom"
            app:cardElevation="@dimen/auth_card_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_2">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/auth_default_padding"
                    android:paddingTop="@dimen/auth_card_padding_top"
                    android:paddingEnd="@dimen/auth_default_padding"
                    android:paddingBottom="@dimen/login_card_padding_bottom">

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_auth" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/control_margin_top_big"
                        android:hint="@string/edit_email_hint">

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/auth_edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/login_tv_padding"
                            tools:text="test@test.com" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/control_margin_top_big"
                        android:hint="@string/edit_password_hint"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/gray_ghost">

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/auth_edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            tools:text="test123" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/auth_button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/GreenMaterialButton"
                        android:layout_marginTop="@dimen/control_margin_top_big"
                        android:text="@string/button_login" />

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/control_margin_top_big"
                        android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/label_dont_have_account" />

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/auth_button_sign_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="6dp"
                            android:fontFamily="@font/open_sans_regular"
                            android:text="@string/sign_up" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/auth_button_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/control_margin_top"
                        android:ellipsize="end"
                        android:fontFamily="@font/open_sans_regular"
                        android:maxLines="1"
                        android:text="@string/button_forgot_password"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>



